# cutie-shell

./: .gitignore  .gitmodules  CMakeLists.txt  LockScreen.qml  README.md  Screen.qml  SettingSheet.qml  SideBar.qml  SideBarSwipe.qml  StatusArea.qml  WaylandChrome.qml  com.github.CutiePiShellCommunityProject.SettingsDaemon.conf  com.github.CutiePiShellCommunityProject.xml  compositor.qml  cutie-ui-io.pro  cutie-ui-io.service  downbar.qml  gtk.css  hwbuttons.h  install  install-pre-build-packages.sh  install.sh  main.cpp  main.qml  maliit.desktop  notifications.cpp  notifications.h  org.cutie_shell.xml  org.freedesktop.Notifications.xml  qml.qrc  settings.cpp  settings.h  start-halium.sh  start.sh  weatherinfo.qml
.circleci/: config.yml
android-service@hwcomposer.service.d/: 20-cutie.conf
apps/: terminal.sh
components/: BigForecastIcon.qml  ForecastIcon.qml
cutie-ui-io.service.d/: 10-desktop.conf  10-mobile.conf  20-convergence.conf  30-hybris.conf
debian/: control  cutie-atmospheres-default.install  cutie-keyboard-layouts.install  cutie-keyboard-style.install  cutie-shell-config-convergence.install  cutie-shell-config-desktop.install  cutie-shell-config-hybris.install  cutie-shell-config-mobile.install  cutie-shell.cutie-ui-io.service  cutie-shell.install  drone.star  rules
fonts/: fonts.qrc
icons/: README.txt  SettingSheet.qml  icons.qrc  qt_attribution.json
logind.conf.d/: 10-cutie.conf
protocols/: cutie-im-relay-v1.xml  text-input-unstable-v1.xml  text-input-unstable-v2.xml  text-input-unstable-v3.xml
qml/: AppScreen.qml  HomeScreen.qml  Keyboard.qml  LauncherSheet.qml  LauncherSwipe.qml  LockScreen.qml  NotificationScreen.qml  Screen.qml  ScreenSwipe.qml  SettingSheet.qml  SideBarSwipe.qml  StatusArea.qml  WaylandChrome.qml  compositor.qml  qml.qrc  style.qml  weatherinfo.qml
settings-daemon/: atmosphere.cpp  atmosphere.h  backlight.cpp  backlight.h  cutie-settings-daemon.pro  cutie-settings-daemon.service  main.cpp  settings.h
sounds/: sounds.qrc
src/: hwbuttons.cpp  hwbuttons.h  main.cpp  org.cutie_shell.xml  (+5 more)
(+112 files in other folders)
